# robotic_arm_project

./: .gitignore  README.md  requirements.txt
src/adc_pot_publisher/: package.xml  setup.cfg  setup.py
src/adc_pot_publisher/adc_pot_publisher/: adc_pot_publisher.py
src/move_it_services/: CMakeLists.txt  package.xml
src/move_it_services/src/: move_to_xyz_service.cpp
src/my_robot_interfaces/: CMakeLists.txt  README.md  package.xml
src/pc_publisher_pkg/: CMakeLists.txt  package.xml
src/pc_publisher_pkg/src/: publisher_node.cpp
src/pca9685_servo_controller/: package.xml  setup.cfg  setup.py
src/pca9685_servo_controller/launch/: raspi.launch.py
src/pca9685_servo_controller/pca9685_servo_controller/: pca9685_servo_controller_node.py
src/pi_subscriber_pkg/: CMakeLists.txt  package.xml
src/pi_subscriber_pkg/src/: subscriber_node.cpp
src/potentiometer_pub/: package.xml  setup.cfg  setup.py
src/potentiometer_reader/: package.xml  setup.py
src/potentiometer_reader/potentiometer_reader/: poti_reader_node.py
src/potentiometer_teleop/: package.xml  setup.cfg  setup.py
src/potentiometer_teleop/potentiometer_teleop/: teleop_node.py
src/robot_controller/: CMakeLists.txt  README.md  package.xml
src/robot_controller/config/: robot_controllers.yaml
src/robot_controller/launch/: controller.launch.py
src/robot_description/: CMakeLists.txt  README.md  package.xml
src/robot_description/launch/: display.launch.py  gazebo.launch.py
src/robot_description/meshes/: Base_Bottom.stl  Base_Plate_with_Servo.stl  GripperBase.stl  GripperLeftFinger.stl  GripperRightFinger.stl  Joint_1_with_Servo.stl  SecondArm.stl
src/robot_description/rviz/: display.rviz
src/robot_description/urdf/: robot.urdf.xacro  robot_gazebo.xacro  robot_ros2_control.xacro
src/robot_fk/: CMakeLists.txt  package.xml
src/robot_fk/src/: robot_fk_node.cpp
src/robot_gui/: package.xml  setup.py
src/robot_gui/launch/: pibot_gui.launch.py
src/robot_gui/robot_gui/: robot_advanced_gui_node.py  robot_gui.ui  robot_gui_node.py
src/robot_gui/share/robot_gui/ui/: robot_gui.ui
src/robot_moveit/: CMakeLists.txt  README.md  package.xml
src/robot_moveit/config/: initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit.rviz  moveit_controllers.yaml  robot.srdf
src/robot_moveit/launch/: moveit.launch.py
src/servo_controller/: package.xml  setup.py
src/servo_controller/servo_controller/: servo_controller_node.py
src/simple_gpio_servo_pkg/: CMakeLists.txt  package.xml
src/simple_gpio_servo_pkg/include/pi_subscriber_pkg/: ServoClass.hpp
src/simple_gpio_servo_pkg/src/: ServoClass.cpp  simple_gpio_servo_node.cpp
