<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot_gui</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="luca.brenzinger@gmail.com">lucab</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>

  <!-- Abhängigkeiten für die Launch-Datei -->
  <exec_depend>ros2launch</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>moveit_configs_utils</exec_depend>
  
  <!-- Abhängigkeiten zu den anderen Paketen, die gestartet werden -->
  <exec_depend>robot_description</exec_depend>
  <exec_depend>robot_controller</exec_depend>
  <exec_depend>robot_moveit</exec_depend>
  <exec_depend>move_it_services</exec_depend>
  <exec_depend>robot_fk</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
