<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>servo_controller</name>
  <version>0.0.0</version>
  <description>ROS 2 package for controlling a servo motor with Raspberry Pi GPIO</description>
  <maintainer email="luca.brenzinger@gmail.com">lucab</maintainer>
  <license>Apache 2.0</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <exec_depend>python3-gpiozero</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
